dev: try to avoid calculation error that casues: (#156)
+ shaking border width
+ shaking border height
+ shaking horizontal scrollbar

--- a/addons/frontend/src/typst.css
+++ b/addons/frontend/src/typst.css
@@ -8,6 +8,10 @@ body {
   background-color: #fff;
 }
 
+.hide-scrollbar-x {
+  overflow-x: hidden;
+}
+
 .typst-text {
   pointer-events: bounding-box;
 }
